<resources>
    <string name="app_name">AndroidLocation</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="current_location">Current Location</string>
    <string name="no_text">no data</string>
    <string name="button_location_send">Send current location</string>
    <string name="post_office_name">Post office name</string>
</resources>
