<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/city_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_office_name"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="11dp"
            android:layout_gravity="center_horizontal" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/txt_postOffice_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:paddingTop="32dp"
            android:layout_alignTop="@+id/city_location" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/latitude_title"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/latitude"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:layout_below="@+id/txt_postOffice_name" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/longitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:layout_below="@+id/latitude_title" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/txt_postOffice_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center" android:layout_alignBaseline="@+id/latitude_title"
            android:layout_alignBottom="@+id/latitude_title" android:layout_toRightOf="@+id/latitude_title"
            android:layout_toEndOf="@+id/latitude_title" android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"/>
        <TextView
            android:id="@+id/txt_postOffice_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:layout_alignBaseline="@+id/longitude_title" android:layout_alignBottom="@+id/longitude_title"
            android:layout_alignLeft="@+id/txt_postOffice_latitude" android:layout_alignStart="@+id/txt_postOffice_latitude"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>